src/snapshots/heave__tests__diagnostic_inputs@MissingSchemaReference.yaml.snap
---
source: src/main.rs
input_file: src/snapshots/diagnostics/MissingSchemaReference.yaml
---
GenerateResult {
    outputs: [
        Output {
            expected_status_code: 200,
            name: "addPet_200.hurl",
            path: "/pets",
            method: "POST",
            header_parameters: [],
            query_parameters: [],
            asserts: [
                "jsonpath \"$\" isCollection",
            ],
            request_body_parameter: "",
        },
    ],
    diagnostics: [
        MissingSchemaReference {
            context: DiagnosticContext {
                operation: "addPet",
                path: "/pets",
            },
            reference: "#/components/schemas/WRONG",
        },
    ],
}
