src/snapshots/heave__tests__diagnostic_inputs@UnsupportedSchemaKind_AllOf_ResponseBody.yaml.snap
---
source: src/main.rs
input_file: src/snapshots/diagnostics/UnsupportedSchemaKind_AllOf_ResponseBody.yaml
---
GenerateResult {
    outputs: [
        Output {
            expected_status_code: 200,
            name: "addPet_200.hurl",
            path: "/pets",
            method: "POST",
            header_parameters: [],
            query_parameters: [],
            asserts: [],
            request_body_parameter: "",
        },
    ],
    diagnostics: [
        UnsupportedSchemaKind {
            context: DiagnosticContext {
                operation: "addPet",
                path: "/pets",
            },
            kind: "AllOf",
            jsonpath: "$",
        },
    ],
}
