src/snapshots/heave__tests__diagnostic_inputs@UnsupportedSchemaKind_AnyOf_ResponseBody.yaml.snap
---
source: src/main.rs
input_file: src/snapshots/diagnostics/UnsupportedSchemaKind_AnyOf_ResponseBody.yaml
---
GenerateResult {
    outputs: [
        Output {
            expected_status_code: 200,
            name: "addPet_200.hurl",
            hurl_path: "/pets",
            oas_path: "/pets",
            oas_operation_id: Some(
                "addPet",
            ),
            method: "POST",
            header_parameters: [],
            query_parameters: [],
            asserts: [],
            request_body_parameter: "",
        },
    ],
    diagnostics: [
        UnsupportedSchemaKind {
            context: DiagnosticContext {
                operation: "addPet",
                path: "/pets",
            },
            kind: "AnyOf",
            jsonpath: "$",
        },
    ],
}
