src/snapshots/heave__tests__diagnostic_inputs@UnsupportedSchemaKind_OneOf_RequestBody.yaml.snap
---
source: src/main.rs
input_file: src/snapshots/diagnostics/UnsupportedSchemaKind_OneOf_RequestBody.yaml
---
GenerateResult {
    outputs: [
        Output {
            expected_status_code: 200,
            name: "addPet_200.hurl",
            hurl_path: "/pets",
            oas_path: "/pets",
            oas_operation_id: Some(
                "addPet",
            ),
            method: "POST",
            header_parameters: [],
            query_parameters: [],
            asserts: [
                "jsonpath \"$\" isCollection",
            ],
            request_body_parameter: "",
        },
    ],
    diagnostics: [
        UnsupportedSchemaKind {
            context: DiagnosticContext {
                operation: "addPet",
                path: "/pets",
            },
            kind: "OneOf",
            jsonpath: "",
        },
    ],
}
