src/snapshots/heave__tests__diagnostic_inputs@UnsupportedStatusCodeRange.yaml.snap
---
source: src/main.rs
input_file: src/snapshots/diagnostics/UnsupportedStatusCodeRange.yaml
---
GenerateResult {
    outputs: [],
    diagnostics: [
        UnsupportedStatusCodeRange {
            context: DiagnosticContext {
                operation: "addPet",
                path: "/pets",
            },
        },
    ],
}
